added additional lines

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       var s = `<body bgcolor=  ${col[num]} >`;
       document.write(s);
       document.write(`<h1> ${hello()} </h1>`);
+      document.write(`<h3> Deployment through git hub actions </h3>`);
     };
     window.onload = setColor;
   </script>
