Final try at this

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <html>
-  <script src="../hello.js"></script>
+  <script src="./hello.js"></script>
   <script>
     var setColor = function () {
       var col = ["red", "green", "blue"];
