--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
       document.write(s);
       document.write(`<h1> ${hello()} </h1>`);
       document.write(`<h3> Deployment through git hub actions </h3>`);
+      document.write(`<h3> Travis CI Testing </h3>`);
     };
     window.onload = setColor;
   </script>
 </html>
-
