--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       document.write(`<h1> ${hello()} </h1>`);
       document.write(`<h3> Deployment through git hub actions </h3>`);
       document.write(`<h3> Travis CI Testing </h3>`);
+      document.write(`<h3> Travis CI code merge </h3>`);
+
     };
     window.onload = setColor;
   </script>
